# Panel-Lavadora

./: .~lock.fsm.ods#  CMakeLists.txt  fsm.ods  pseudo.txt
Carga-de-Ropa/: CMakeLists.txt  NivelCarga.cpp  NivelCarga.h  README.md  Test.cpp
Carga-de-Ropa/C/: CMakeLists.txt  README.md  nivel_carga.c  test.c
Carga-de-Ropa/C++/: CMakeLists.txt  NivelCarga.cpp  Test.cpp
Centrifuga/: CMakeLists.txt  README.md  centrifuga.c
Encendido-Apagado/: CMakeLists.txt  on-off.c  test.c
FSM/: CMakeLists.txt  FSM.cpp  States.cpp  Test.cpp  fsm.cpp  fsm.h  states.cpp  test  test.cpp
Lavado/: CMakeLists.txt
Main/: CMakeLists.txt  main.c
Menu/: CMakeLists.txt  bits.h  button.c  button.h  common.c  common.h  menu.c  menu.h  pin_list.h  test.c
Modo/: ModoLavadora.cpp
Modo-Lavadora/: CMakeLists.txt  ModoLavadora.cpp  ModoLavadora.h  README.md  Test.cpp
Nivel-Agua/: CMakeLists.txt  README.md  nivel_agua.c  test.c
Secado/: CMakeLists.txt
Temperatura/: CMakeLists.txt  README.md  SistemaControl.cpp  Test.cpp  gpio_utils.c  gpio_utils.h  temperatura.c  test.cpp
Temporizador/: CMakeLists.txt  README.md  pin_list.h  prueba.c  test.c  timer.c  timer.h
UART/: CMakeLists.txt
UART/Controlador/: CMakeLists.txt  Controlador.cpp  Test.cpp
UART/Periferico/: CMakeLists.txt  Periferico.cpp  Test.cpp
UART/receptor/: CMakeLists.txt  receptor.cpp
UART/transmisor/: CMakeLists.txt  transmisor.cpp
include/: Controlador.h  Events.h  FSM.h  ModoLavadora.h  NivelCarga.h  Periferico.h  nivel_carga.h
